Add torch to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-bcrypt
+streamlit
 streamlit-authenticator
-prophet
 pandas
 numpy
-scikit-learn
 matplotlib
-seaborn
-openpyxl
-xgboost
-statsmodels
-transformers
-streamlit
-reportlab
-facebook-business
 plotly
+prophet
+openpyxl
+facebook_business
+transformers
+torch
+bcrypt
+pyyaml
